align-content fixed in media query 768

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ img {
         flex-flow: row wrap;
         justify-content: flex-start;
         align-items: flex-start;
-        align-content: flex-start;
+        align-content: center;
         gap: 15px;
     }
     
